[package]
name = "libaoc"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {  version = "0.11", features = [ "blocking" ] }
dirs = { version = "5.0", optional = true }

[features]
file_cache = ["dep:dirs"]
default = ["file_cache"]